crates/val-json/src/snapshots/obeli_sk_val_json__wast_val_ser__tests__serde_enum.snap
---
source: crates/val-json/src/wast_val_ser.rs
expression: json
---
{
  "type": {
    "enum": [
      "a-a",
      "b"
    ]
  },
  "value": "a_a"
}
