crates/val-json/src/snapshots/obeli_sk_val_json__wast_val_ser__tests__serde_list_u8_base64.snap
---
source: crates/val-json/src/wast_val_ser.rs
expression: json
---
{
  "type": "list<u8>",
  "value": "AAH/gA=="
}
