crates/val-json/src/snapshots/obeli_sk_val_json__wast_val_ser__tests__serde_record.snap
---
source: crates/val-json/src/wast_val_ser.rs
expression: json
---
{
  "type": "record { field1: bool, field-2: u32 }",
  "value": {
    "field1": true,
    "field_2": 1
  }
}
