crates/val-json/src/snapshots/obeli_sk_val_json__wast_val_ser__tests__serde_result_err_none.snap
---
source: crates/val-json/src/wast_val_ser.rs
expression: json
---
{
  "type": "result",
  "value": {
    "err": null
  }
}
